--- a/package.json
+++ b/package.json
@@ -44,6 +44,6 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
-    "gsap": "^3.7.0"
+    "gsap": "npm:@gsap/member@^3.7.0"
   }
 }
